# clickhouse-qol

./: CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml
config/clickhouse/: clickhouse.xml
examples/: migration.rs
examples/migrations/20250522022111_create_users/: down.sql  up.sql
examples/migrations/20250522092349_update_users/: down.sql  up.sql
src/: error.rs  lib.rs  worker.rs
src/migrations/: clickhouse_operations.rs  mod.rs
src/worker/: insert_worker.rs
