[package]
name = "clickhouse-qol"
version = "0.1.0"
edition = "2021"
description = "Quality of Life tools for ClickHouse"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
clickhouse = { version = "0.13", features = ["time", "inserter"]}
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
thiserror = "2.0"
url = "2.5"
urlencoding = "2.1"
time = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "clickhouse-qol-cli"
path = "bin/cli.rs"
